<resources>
    <string-array name="Constraint">
        <item>Alergi</item>
        <item>Pengeluaran</item>
        <item>Nutrisi</item>
    </string-array>
    <string-array name="Alergi">
        <item>Kacang tanah</item>
        <item>Susu</item>
        <item>Telur</item>
        <item>Makanan laut (kerang, udang, lobster)</item>
        <item>Ikan</item>
        <item>Kacang pohon (misalnya, almond, kenari)</item>
        <item>Gandum</item>
        <item>Kedelai</item>
        <item>Gluten</item>
        <item>wijen</item>
    </string-array>
    <string-array name="Pengeluaran">
        <item>Rp5.000</item>
        <item>Rp10.000</item>
        <item>Rp15.000</item>
        <item>Rp20.000</item>
        <item>Rp25.000</item>
        <item>Rp30.000</item>
        <item>Rp50.000</item>
        <item>Rp100.000</item>
    </string-array>
    <string-array name="Waktu">
        <item>per hari</item>
    </string-array>
    <string-array name="Nutrisi">
        <item>Karbohidrat</item>
        <item>Protein</item>
        <item>Lemak</item>
        <item>Serat</item>
        <item>Vitamin A</item>
        <item>Vitamin C</item>
        <item>Vitamin D</item>
        <item>Vitamin E</item>
        <item>Vitamin K</item>
        <item>Folat (Vitamin B9)</item>
        <item>Vitamin B12</item>
        <item>Vitamin B6</item>
        <item>Kalium</item>
        <item>Kalsium</item>
        <item>Magnesium</item>
        <item>Fosfor</item>
        <item>Zat besi</item>
        <item>Yodium</item>
        <item>Omega-3</item>
        <item>Antioksidan</item>
    </string-array>
    <string-array name="Mineral">
        <item>Kalsium</item>
        <item>Besi</item>
        <item>Seng</item>
        <item>Magnesium</item>
        <item>Kalium</item>
        <item>Fosfor</item>
        <item>Natrium</item>
        <item>Klorida</item>
        <item>Mangan</item>
        <item>Fluor</item>
    </string-array>
    <string name="app_name">Ejajan</string>
    <string name="Deskripsi_logo">Logo E-Jajan</string>
    <string name="Apps">E - Jajan</string>
    <string name="welcome">EJajan</string>
    <string name="btnlogin_student">Login Pelajar</string>
    <string name="btnlogin_parent_merchant">Login Orang Tua atau Pedagang</string>
    <string name="description_login">Masukkan kredensial login yang diberikan</string>
    <string name="invalid_email">Masukkan email dengan benar</string>
    <string name="minimum_characters">Kata sandi harus minimal 8 karakter</string>
    <string name="input_your_email">Masukkan email Anda</string>
    <string name="input_your_password">Masukkan kata sandi Anda</string>
    <string name="btnLogin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_role">Pilih peran Anda untuk mulai mengelola akun Anda dan menikmati fitur aplikasi kami</string>
    <string name="student">Pelajar</string>
    <string name="parent">Orang Tua</string>
    <string name="merchant">Pedagang</string>
    <string name="image_chosee_role">Gambar Pilih Peran</string>
    <string name="parent_desc1">Sebagai Orang Tua, Anda dapat menetapkan alergi, batasan pengeluaran, dan kebutuhan nutrisi untuk siswa Anda</string>
    <string name="parent_desc2">Sebagai Orang Tua, Anda dapat memantau saldo akun dan riwayat pembelian siswa Anda</string>
    <string name="parent_desc3">Sebagai Orang Tua, Anda dapat melihat data pengeluaran dan nutrisi siswa Anda dalam bentuk grafis yang mudah dipahami</string>
    <string name="next">Selanjutnya</string>
    <string name="ready_to_start">Mulai</string>
    <string name="start_desc">Anda siap menggunakan aplikasi! Temukan kemudahan dalam setiap peran dan mulailah pengalaman baru dengan aplikasi ini</string>
    <string name="merchant_desc1">Sebagai Pedagang, Anda dapat menambahkan menu baru dengan rincian seperti nama, harga, dan deskripsi makanan</string>
    <string name="merchant_desc2">Sebagai Pedagang, Anda dapat menerima dan mengkonfirmasi pesanan untuk memastikan proses berjalan lancar</string>
    <string name="merchant_desc3">Sebagai Pedagang, Anda dapat menerima pembayaran dari saldo siswa secara langsung saat pesanan diambil</string>
    <string name="student_desc1">Sebagai Siswa, Anda dapat masuk menggunakan fitur pengenalan wajah untuk memastikan keamanan</string>
    <string name="student_desc2">Sebagai seorang Siswa, Anda dapat mengonfirmasi pesanan makanan dengan mudah menggunakan teknologi pengenalan wajah</string>
    <string name="student_desc3">Sebagai Siswa, Anda dapat melihat menu dan rekomendasi makanan yang telah disesuaikan dengan batasan yang ditetapkan oleh orang tua Anda</string>
    <string name="start_camera">Mulai kamera</string>
    <string name="title_activity_merchant">MerchantActivity</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="title_report">Report</string>
    <string name="title_student">Student</string>
    <string name="welcome_merchant">Selamat Datang Pedagang</string>
    <string name="deskripsi_homeMerchant">Semoga harimu menyenangkan!</string>
    <string name="saldo_rp_10_000">Saldo : Rp. 10.000</string>
    <string name="pesanan_masuk">Pesanan masuk</string>
    <string name="see_all">Lihat Semua</string>
    <string name="welcome_parent">Welcome Orang Tua</string>
    <string name="deskripsi_homeWelcome">Anda dapat menetapkan batasan, melihat riwayat pembelian, dan memantau pengeluaran dan nutrisi Siswa</string>
    <string name="top_up">Top Up</string>
    <string name="saldo_rp_0">Saldo : Rp0</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="fill_all_fields">Harap isi semua kolom</string>
    <string name="invalid_role">Peran tidak valid, silakan coba lagi</string>
    <string name="text_judul">Login Aman</string>
    <string name="text_judul2">Pesan dengan Mudah</string>
    <string name="text_judul3">Menu yang Dipersonalisasi</string>
    <string name="parent_judul1">Pegang Kendali</string>
    <string name="parent_judul2">Pantau dengan Mudah</string>
    <string name="parent_judul3">Visualisasikan Wawasan</string>
    <string name="merchant_judul1">Buat Menu dengan Mudah</string>
    <string name="merchant_judul2">Proses Pesanan</string>
    <string name="merchant_judul3">Dapatkan Bayaran dengan Cepat</string>
    <string name="start_login">Siap untuk memulai!</string>
    <string name="welcome_text">Pilih peran Anda</string>
    <string name="lewati">Lewati</string>
    <string name="kembali">Kembali</string>
    <string name="orderconfirmation"><![CDATA[Please verify student identity using facial recognition to confirm order pickup.]]></string>
    <string name="deskripsi_homeStudent">Ayo, pilih makanan sehat dan lezat untukmu!</string>
    <string name="welcome_student">Selamat Datang Pelajar</string>
    <string name="personal_picks">Pilihan Pribadi</string>
    <string name="healty_choices">Pilihan Sehat</string>
    <string name="special_offers">Penawaran Khusus</string>
    <string name="order_desc">Nasi goreng adalah nasi yang digoreng dalam wajan dengan berbagai bumbu dan bahan, seperti bawang putih, bawang merah, kecap manis, garam, dan merica.</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="notification">Pemberitahuan</string>
    <string name="select_language">Pilih Bahasa</string>
    <string name="logout">Keluar</string>
    <string name="alergi">Alergi</string>
    <string name="spending">Pengeluaran</string>
    <string name="rp50_000">Rp50.000</string>
    <string name="tambah">Tambah</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
    <string name="laporan">Laporan Penjualan</string>
    <string name="cair_saldo">Cairkan Saldo</string>
    <string name="jam_buka">Jam Buka</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="Deskripsi_arrow">Arrow</string>
    <string name="kurang">kurang</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="food_name">Nama Makanan</string>
    <string name="input_food_name">Input Nama Makanan</string>
    <string name="price_food">Harga Makanan</string>
    <string name="input_price_food">Input Harga Makanan</string>
    <string name="description">Deskripsi</string>
    <string name="input_description">Input Deskripsi</string>
    <string name="basic_ingredients">Bahan Dasar</string>
    <string name="input_basic_ingredients">Masukkan Bahan Dasar</string>
    <string name="preparation_time">Waktu Persiapan</string>
    <string name="input_preparation_time">Waktu Persiapan Input</string>
    <string name="pengambilan_dana_berhasil">Pengambilan Dana berhasil!</string>
    <string name="balance_confirm">Saldo Anda telah berhasil ditambahkan ke akun anak Anda.</string>
    <string name="back_to_home">Kembali ke beranda</string>
    <string name="name_food">Nama Makanan</string>
    <string name="average_preparation_time">Waktu Persiapan Rata-rata</string>
    <string name="in_progress">Sedang Diproses</string>
    <string name="order_notes">Catatan Pesanan</string>
    <string name="notes">Jangan membuatnya terlalu pedas, telurnya setengah matang, dan rasanya harus lezat.</string>
    <string name="pickup_time">Waktu Pengambilan</string>
    <string name="time">12:30</string>
    <string name="quantity">Kuantitas</string>
    <string name="quantitiy">10</string>
    <string name="confirm_order">Konfirmasi Pesanan</string>
    <string name="konfirmasi_berhasil">Konfirmasi Berhasil!</string>
    <string name="username">Nama Pengguna</string>
    <string name="enter_your_username">Masukkan nama pengguna Anda</string>
    <string name="enter_your_email">Masukkan email Anda</string>
    <string name="enter_your_password">Masukkan kata sandi Anda</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="re_enter_your_password">Masukkan kembali kata sandi Anda</string>
    <string name="info">Info</string>
    <string name="tipe_constraint">Jenis Kendala</string>
    <string name="nominal_limit">Batas Nominal</string>
    <string name="time_period">Periode Waktu</string>
    <string name="transaksi_berhasil">Transaksi Berhasil!</string>
    <string name="order_summary">Ringkasan Pesanan</string>
    <string name="nasi_goreng_nprice_rp_15_000">Nasi Goreng\nPrice: Rp. 15.000</string>
    <string name="aqua_nprice_rp_15_000">Aqua\nPrice: Rp. 15.000</string>
    <string name="pickup_time_estimate_00_00">Pickup Time Estimate: 00:00</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="sub_total_rp_30_000">Sub Total: Rp. 30.000</string>
    <string name="total_rp_30_000">Total: Rp. 30.000</string>
    <string name="cancel_order">Batalkan Pesanan</string>
    <string name="add_to_cart">Tambahkan ke Keranjang</string>
    <string name="order_note">Catatan Pesanan</string>
    <string name="all_product">Semua Produk</string>
    <string name="low_calories">Rendah Kalori</string>
    <string name="high_protein">Protein Tinggi</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pesanan_berhasil">Pesanan Berhasil</string>
    <string name="please_wait_for_the_order_sesuai_to_the_pickup_time">Harap menunggu pesanan sesuai waktu penjemputan.</string>
    <string name="tanggal_pemesanan_22_november_2024">Pemesanan Tanggal: 22 November 2024</string>
    <string name="makanan">Makanan:</string>
    <string name="catatan_pemesanan">Catatan Pemesanan:</string>
    <string name="waktu_pengambilan_18_00_wib">Waktu Pengambilan: 18:00 WIB</string>
    <string name="total_pembayaran_rp60_000">Total Pembayaran: Rp60.000</string>
</resources>