<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home2">

    <fragment
        android:id="@+id/navigation_home2"
        android:name="com.mnrf.ejajan.view.main.parent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home2" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.mnrf.ejajan.view.main.parent.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_student"
        android:name="com.mnrf.ejajan.view.main.parent.ui.student.StudentFragment"
        android:label="@string/title_student"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/navigation_setting2"
        android:name="com.mnrf.ejajan.view.main.parent.ui.setting.Setting2Fragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting2" />
</navigation>