<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mnrf.ejajan.view.main.merchant.ui.home.HomeMerchantFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_merchant_home" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.mnrf.ejajan.view.main.merchant.ui.menu.MenuMerchantFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_merchant_menu" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.mnrf.ejajan.view.main.merchant.ui.setting.SettingMerchantFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_merchant_setting" />
</navigation>