<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.onboarding.OnboardingActivity">

    <ImageView
        android:id="@+id/chosee_role"
        android:layout_width="450dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image_chosee_role"
        app:layout_constraintBottom_toTopOf="@id/role_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chosee_role" />

    <TextView
        android:id="@+id/role_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/welcome_role"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chosee_role"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:id="@+id/btn_role_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/btnlogin_student"
        android:text="@string/student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/role_text" />

    <Button
        android:id="@+id/btn_role_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/parent"
        android:backgroundTint="@color/btnlogin_student"
        app:layout_constraintTop_toBottomOf="@id/btn_role_student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <Button
        android:id="@+id/btn_role_merchant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/merchant"
        android:backgroundTint="@color/btnlogin_student"
        app:layout_constraintTop_toBottomOf="@id/btn_role_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
