<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.onboarding.StartToLogin">

    <ImageView
        android:id="@+id/start_login"
        android:layout_width="450dp"
        android:layout_height="350dp"
        android:src="@drawable/start_login"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_chosee_role" />

    <TextView
        android:id="@+id/start_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_desc"
        android:textSize="27sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/start_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/btn_start_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ready_to_start"
        android:backgroundTint="@color/btnlogin_student"
        app:layout_constraintTop_toBottomOf="@id/start_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>